add self-update